<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/account_icon"
        android:contentDescription="@string/account_icon_content_description"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:src="@drawable/icon_account_circle" />

    <LinearLayout
        android:id="@+id/login_form_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/username_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:autofillHints="username"
            android:background="@drawable/rounded_corner"
            android:hint="@string/username_hint"
            android:inputType="text"
            android:padding="18dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/password_input"
            android:autofillHints="password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/password_hint"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp"
            android:background="@drawable/rounded_corner"
            android:padding="18dp"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/white"
            android:padding="18dp"
            android:text="@string/login_button_text"
            android:textColor="#3B84f1"
            android:textSize="20sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/social_login_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/social_login_text"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:layout_marginTop="32dp"/>
    <LinearLayout
        android:id="@+id/social_login_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        android:gravity="center">


    <ImageView
        android:contentDescription="@string/facebook_button_content_description"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_margin="16dp"
        android:id="@+id/facebook_btn"
        android:src="@drawable/img"/>

    <ImageView
        android:contentDescription="@string/linkedin_button_content_description"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_margin="16dp"
        android:id="@+id/linkedin_btn"
        android:src="@drawable/img_1" />

    </LinearLayout>
</LinearLayout>